GearsetPOC/force-app/main/default/objects/Reference_Links__c/Reference_Links__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Reference Links</label>
</CustomObject>