GearsetPOC/force-app/main/default/objects/Reference_Links__c/fields/Carte_Blanche_QueueID__c.field-meta.xml
<CustomField>
    <fullName>Carte_Blanche_QueueID__c</fullName>
    <label>Carte Blanche QueueID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>