GearsetPOC/force-app/main/default/objects/Reference_Links__c/fields/EBSC_Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>EBSC_Business_Hours__c</fullName>
    <label>EBSC Business Hours</label>
    <length>30</length>
    <type>Text</type>
</CustomField>