GearsetPOC/force-app/main/default/objects/Reference_Links__c/fields/Fraud_RecordType__c.field-meta.xml
<CustomField>
    <fullName>Fraud_RecordType__c</fullName>
    <label>Fraud RecordType</label>
    <length>30</length>
    <type>Text</type>
</CustomField>