GearsetPOC/force-app/main/default/objects/Reference_Links__c/fields/MergeAccountURL__c.field-meta.xml
<CustomField>
    <fullName>MergeAccountURL__c</fullName>
    <label>MergeAccountURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>