GearsetPOC/force-app/main/default/objects/Reference_Links__c/fields/MergeCustImage__c.field-meta.xml
<CustomField>
    <fullName>MergeCustImage__c</fullName>
    <label>MergeCustImage</label>
    <length>150</length>
    <type>Text</type>
</CustomField>